--- a/Agrupaciones_Musicales/AgrupacionesMusicales.css
+++ b/Agrupaciones_Musicales/AgrupacionesMusicales.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -47,7 +49,6 @@ header {
 .logo {
     color: black;
     font-size: 19px;
-    font-weight: lighter;
     display: flex;
     align-items: center;
 }
@@ -534,6 +535,14 @@ header {
     justify-content: space-around;
 }
 
+#am{
+    margin-top: 90px;
+}
+
+#ac{
+    margin-top: 90px;
+}
+
 .galleryH1 {
     margin-top: 20px;
     display: inline-block;
@@ -569,6 +578,14 @@ header {
     transform: scale(1.1);
     margin-left: 5px;
     margin-right: 5px;
+}
+
+#amGallery{
+    height: 200px;
+}
+
+.gallery video{
+    width: 320px;
 }
 
 .text h1 {
