--- a/Niñez_y_Juventud/NiñezYJuventud.css
+++ b/Niñez_y_Juventud/NiñezYJuventud.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -47,7 +49,6 @@ header {
 .logo {
     color: black;
     font-size: 19px;
-    font-weight: lighter;
     display: flex;
     align-items: center;
 }
@@ -471,9 +472,9 @@ header {
 }
 
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1101px) {
     .title{
-       margin-bottom: 0px;
+       margin-bottom: -50px;
     }
 }
 
