--- a/Obra_Social/ObraSocial.css
+++ b/Obra_Social/ObraSocial.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -47,7 +49,6 @@ header {
 .logo {
     color: black;
     font-size: 19px;
-    font-weight: lighter;
     display: flex;
     align-items: center;
 }
@@ -470,7 +471,7 @@ header {
     text-align: center;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1101px) {
     .title{
         margin-bottom: -50px;
     }
@@ -498,6 +499,13 @@ header {
     width: 600px;
     max-width: 100%;
 }
+
+@media screen and (min-width: 1101px) {
+    #ccm{
+        margin-bottom: 50px;
+    }    
+}
+
 
 #imgOficina{
     width: 400px;
@@ -631,8 +639,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 100px;
     height: 80px;
 }
 
