--- a/Cuerpos_Ministeriales/CuerposMinisteriales.css
+++ b/Cuerpos_Ministeriales/CuerposMinisteriales.css
@@ -488,15 +488,16 @@ header {
     align-items: center;
 }
 
+@media (min-width: 1200px){
+    #cg{
+        margin-top: 100px;
+    }
+}
+
 .about .content img {
     height: auto;
     width: 600px;
     max-width: 100%;
-}
-
-#ObrerosMainPicture{
-    width: 350px;
-    height: 450px;
 }
 
 #imgOficina{
@@ -531,6 +532,12 @@ header {
     color: #214194;
     font-size: 30px;
 }
+
+.galleryInfo{
+    width: 100%;
+    color: #214194;
+    font-weight: 600;
+ }
 
 .about .content .gallery{
     width: 100%;
@@ -579,6 +586,13 @@ header {
     font-size: 18px;
     line-height: 28px;
     letter-spacing: 1px;
+    margin-bottom: 45px;
+    text-align: justify;
+}
+
+#parrafoObreros{
+    font-size: 18px;
+    line-height: 20px;
     margin-bottom: 45px;
     text-align: justify;
 }
@@ -718,10 +732,6 @@ footer {
     cursor: pointer;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-out;
-}
-
-.wrapper .button:hover {
-    width: 200px;
 }
 
 .wrapper .button .icon {
