--- a/Niñez_y_Juventud/NiñezYJuventud.css
+++ b/Niñez_y_Juventud/NiñezYJuventud.css
@@ -465,16 +465,16 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 150px;
+    margin-bottom: 90px;
     font-size: 25px;
     width: 100%;
     text-align: center;
 }
 
 
-@media screen and (max-width: 1101px) {
+@media screen and (max-width: 1100px) {
     .title{
-       margin-bottom: -50px;
+       margin-bottom: -25px;
     }
 }
 
@@ -529,6 +529,12 @@ header {
     color: #214194;
     font-size: 30px;
 }
+
+.galleryInfo{
+    width: 100%;
+    color: #214194;
+    font-weight: 600;
+ }
 
 .about .content .gallery{
     width: 100%;
@@ -595,7 +601,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translate(5px, 30px);
+    transform: translate(5px, 20px);
 }
 
 .SMLink i {
@@ -725,10 +731,6 @@ footer {
     cursor: pointer;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-out;
-}
-
-.wrapper .button:hover {
-    width: 200px;
 }
 
 .wrapper .button .icon {
