--- a/Obra_Social/ObraSocial.css
+++ b/Obra_Social/ObraSocial.css
@@ -540,6 +540,12 @@ header {
     font-size: 30px;
 }
 
+.galleryInfo{
+    width: 100%;
+    color: #214194;
+    font-weight: 600;
+ }
+
 .about .content .gallery{
     width: 100%;
     height: 130px;
@@ -747,10 +753,6 @@ footer {
     cursor: pointer;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-out;
-}
-
-.wrapper .button:hover {
-    width: 200px;
 }
 
 .wrapper .button .icon {
